--- a/tests/config.yml
+++ b/tests/config.yml
@@ -9,6 +9,8 @@ bot:
 database:
   host: 0.0.0.0
   port: 5432
+#  host: localhost
+#  port: 5434
   user: kts_user
   password: kts_pass
   database: kts
