--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,5 +1,5 @@
 name: Check homework
-on: [push]
+on: [push, workflow_dispatch]
 jobs:
   runner-job:
     runs-on: ubuntu-latest
@@ -29,8 +29,8 @@ jobs:
             python-version: 3.11
 
       - name: Install dependencies
-#        run: pip install poetry && poetry install
-        run: pip install -r requirements.txt
+        run: pip install poetry && poetry install
+#        run: pip install -r requirements.txt
 
       - name: update pythonpath
         run: echo "PYTHONPATH=$PYTHONPATH:/home/runner/work/hw-backend-summer-2022-3-sqlalchemy/hw-backend-summer-2022-3-sqlalchemy" >> $GITHUB_ENV
