--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,9 @@ marshmallow = "^3.19.0"
 pyyaml = "^6.0"
 cryptography = '*'
 aiohttp-devtools = "^1.0.post0"
+marshmallow-dataclass = "^8.5.11"
+bson = "^0.5.10"
+aio-pika = "^8.3.0"
 
 [build-system]
 requires = ["poetry-core"]
