--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,48 @@
-aiohttp==3.8.3
+aio-pika==8.3.0
+aiohttp==3.8.4
 aiohttp-apispec==2.2.3
+aiohttp-devtools==1.0.post0
 aiohttp-session==2.12.0
+aiormq==6.6.4
 aiosignal==1.3.1
-alembic==1.9.2
+alembic==1.9.4
+anyio==3.6.2
 apispec==3.3.2
+asttokens==2.2.1
 async-timeout==4.0.2
 asyncpg==0.27.0
 attrs==22.2.0
+bson==0.5.10
+certifi==2022.12.7
 cffi==1.15.1
-charset-normalizer==2.1.1
-colorama==0.4.6
+charset-normalizer==3.0.1
+click==8.1.3
 coverage==7.1.0
-cryptography==39.0.0
+cryptography==39.0.1
+devtools==0.10.0
+executing==1.2.0
 frozenlist==1.3.3
 greenlet==2.0.2
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+httpcore==0.16.3
+httpx==0.23.3
+hyperframe==6.0.1
 idna==3.4
 iniconfig==2.0.0
 Jinja2==3.1.2
 Mako==1.2.4
 MarkupSafe==2.1.2
 marshmallow==3.19.0
+marshmallow-dataclass==8.5.11
 multidict==6.0.4
+mypy-extensions==1.0.0
 packaging==23.0
+pamqp==3.2.1
 pluggy==1.0.0
 pycparser==2.21
+Pygments==2.14.0
 pyparsing==3.0.9
 pytest==7.2.1
 pytest-aiohttp==1.0.4
@@ -32,10 +51,16 @@ pytest-cov==4.0.0
 pytest-mock==3.10.0
 python-dateutil==2.8.2
 python-dotenv==0.21.1
+python-telegram-bot==20.1
+python-telegram-bot-raw==20.1
 PyYAML==6.0
+rfc3986==1.5.0
 simplejson==3.18.3
 six==1.16.0
-SQLAlchemy==2.0.2
-typing_extensions==4.4.0
+sniffio==1.3.0
+SQLAlchemy==2.0.4
+typing-inspect==0.8.0
+typing_extensions==4.5.0
+watchgod==0.8.2
 webargs==5.5.3
 yarl==1.8.2
