--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,14 +23,14 @@ services:
 
 
   rabbitmq:
-    image: rabbitmq:3-management
+    image: heidiks/rabbitmq-delayed-message-exchange:latest
     restart: always
-    ports:
-      - "15673:15672"
-      - "5673:5672"
     environment:
-      - "RABBITMQ_DEFAULT_PASS=pass"
-      - "RABBITMQ_DEFAULT_USER=user"
+      - RABBITMQ_DEFAULT_USER=admin
+      - RABBITMQ_DEFAULT_PASS=password
+    ports:
+      - "5673:5672"
+      - "15673:15672"
     networks:
       - kts_st_week3
 
