remove vk. standalone poller

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,28 @@ marshmallow-dataclass = "^8.5.11"
 bson = "^0.5.10"
 aio-pika = "^8.3.0"
 translate = "^3.6.1"
+black = "^23.1.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.black]
+line-length = 120
+target-version = ['py311']
+exclude = '''
+/(
+    \.eggs
+  | \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | _build
+  | buck-out
+  | build
+  | dist
+  | migrations
+)/
+'''
