add docker to main

--- a/.env_dev
+++ b/.env_dev
@@ -1,7 +1,25 @@
-DATABASE=postgres
+#TelegramBot
+BOT_TOKEN_TG=5799107708:AAHojRBpqBB0GTDzdCteATQKu-mLIywRwrA
 
-POSTGRES_SERVICE=postgresql+asyncpg
-POSTGRES_DB=kts
-POSTGRES_USER=kts_user
-POSTGRES_PASSWORD=kts_pass
-POSTGRES_HOST=db
+#YandexDict
+YANDEX_DICT_TOKEN=dict.1.1.20230223T072145Z.c35f1b3c35d3c8f9.14578bfe66228bc4edf99d8090d4d0c524d6959a
+
+#RabbitMQ
+RABBITMQ_DEFAULT_HOST=rabbitmq
+RABBITMQ_DEFAULT_PORT=5672
+RABBITMQ_DEFAULT_USER=admin
+RABBITMQ_DEFAULT_PASS=password
+
+#Database:
+POSTGRES_DEFAULT_HOST=db
+POSTGRES_DEFAULT_PORT=5432
+POSTGRES_DEFAULT_USER=kts_user
+POSTGRES_DEFAULT_PASS=kts_pass
+POSTGRES_DEFAULT_DB=kts
+
+#session
+SESSION_KEY=CaY5iCkYtN7DqXdiYK1BvmGrQuaSA4Tl4bEk9my0jc0=
+
+#admin
+EMAIL=admin@admin.com
+PASSWORD=admin
