--- a/compose/aiohttp_web/Dockerfile
+++ b/compose/aiohttp_web/Dockerfile
@@ -1,9 +1,30 @@
-FROM python:3.11
+FROM python:3.11-alpine3.17
 
-RUN apt update && apt -y install gettext-base
+ARG YOUR_ENV
 
-COPY ./app/poller_app .
+ENV YOUR_ENV=dev \
+      # python:
+      PYTHONFAULTHANDLER=1 \
+      PYTHONUNBUFFERED=1 \
+      PYTHONHASHSEED=random \
+      PYTHONDONTWRITEBYTECODE=1 \
+      # pip:
+      PIP_NO_CACHE_DIR=1 \
+      PIP_DISABLE_PIP_VERSION_CHECK=1 \
+      PIP_DEFAULT_TIMEOUT=100 \
+      PIP_ROOT_USER_ACTION=ignore \
+      # poetry:
+      POETRY_VERSION=1.4.0 \
+      POETRY_NO_INTERACTION=1 \
+      POETRY_CACHE_DIR='/var/cache/pypoetry' \
+      POETRY_HOME='/usr/local'
 
-RUN pip install poetry && poetry install
+RUN apk add --no-cache bash
 
-EXPOSE 8080
+RUN pip install "poetry==$POETRY_VERSION"
+
+ENV PATH="$PATH:$POETRY_HOME/bin"
+
+COPY . .
+
+RUN poetry install --no-interaction --no-ansi
