--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: postgres
     restart: always
     env_file:
-      - ./.env_dev
+      - ./.env
     ports:
       - '5434:5432'
     volumes:
