--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ translate = "^3.6.1"
 black = "^23.1.0"
 rabbitmq = "^0.2.0"
 aioresponses = "^0.7.4"
+psycopg2 = "^2.9.5"
 
 [build-system]
 requires = ["poetry-core"]
