--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,8 @@ translate = "^3.6.1"
 black = "^23.1.0"
 rabbitmq = "^0.2.0"
 aioresponses = "^0.7.4"
-psycopg2 = "^2.9.5"
+psycopg2-binary = "^2.8.6"
+aiosqlite = "^0.18.0"
 
 [build-system]
 requires = ["poetry-core"]
