--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ aio-pika = "^8.3.0"
 translate = "^3.6.1"
 black = "^23.1.0"
 rabbitmq = "^0.2.0"
+flake8 = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core"]
