--- a/compose/poller/Dockerfile
+++ b/compose/poller/Dockerfile
@@ -4,3 +4,4 @@ COPY ./app/poller_app/  /code/app/poller_app/
 COPY ./app/store/rabbitMQ/  /code/app/poller_app/app/store/rabbitMQ/
 COPY ./app/store/tg_api/   /code/app/poller_app/app/store/tg_api/
 COPY ./app/web/config.py/ /code/app/poller_app/app/web/
+COPY ./starter.py /code/app/poller_app/
