--- a/compose/sender/Dockerfile
+++ b/compose/sender/Dockerfile
@@ -7,3 +7,4 @@ COPY ./app/store/ /code/app/sender_app/app/store/
 COPY ./app/web/config.py/ /code/app/sender_app/app/web/
 COPY ./app/admin/ /code/app/sender_app/app/admin
 COPY ./app/words_game/ /code/app/sender_app/app/words_game
+COPY ./starter.py /code/app/sender_app/
