--- a/compose/worker/Dockerfile
+++ b/compose/worker/Dockerfile
@@ -8,3 +8,4 @@ COPY ./app/web/config.py/ /code/app/worker_app/app/web/
 COPY ./app/words_game/ /code/app/worker_app/app/words_game
 COPY ./app/admin/ /code/app/worker_app/app/admin
 COPY ./app/admin/ /code/app/worker_app/app/admin
+COPY ./starter.py /code/app/worker_app/
