--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,6 +1,37 @@
 name: Deploy to vps
 on: [workflow_dispatch]
 jobs:
+  run_tests:
+    runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_PASSWORD: kts_pass
+          POSTGRES_USER: kts_user
+          POSTGRES_DB: kts
+        ports:
+          - 5432:5432
+    steps:
+
+      - uses: actions/checkout@v2
+#      - name: Postgres Backup Restore
+#        uses: tj-actions/pg-restore@v4.5
+#        with:
+#          database_url: "postgres://kts_user:kts_pass@postgres:5432/kts"
+#          backup_file: "db/init.sql"
+
+      - uses: actions/checkout@master
+
+      - uses: actions/setup-python@v1
+        with:
+          python-version: '3.11'
+      - name: Install requirements
+        run: poetry install
+      - name: Migrate database
+        run: poetry run alembic upgrade head
+      - name: Run tests
+        run: pytest -cov=app
 
     build-and-deploy:
         runs-on: ubuntu-latest
