--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,16 +7,16 @@ jobs:
       db:
         image: postgres
         env:
-          POSTGRES_PASSWORD: kts_pass
-          POSTGRES_USER: kts_user
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
           POSTGRES_DB: kts
         ports:
           - 5432:5432
       rabbitmq:
         image: heidiks/rabbitmq-delayed-message-exchange:latest
         env:
-          RABBITMQ_USER: admin
-          RABBITMQ_PASSWORD: password
+          RABBITMQ_USER: ${{ secrets.RABBITMQ_USER }}
+          RABBITMQ_PASSWORD: ${{ secrets.RABBITMQ_PASSWORD }}
           RABBITMQ_HOST: rabbitmq
           RABBITMQ_PORT: 5672
         ports:
@@ -38,25 +38,46 @@ jobs:
       - name: Run tests
         run: pytest --cov=app
 
-#  build-and-deploy:
-#      runs-on: ubuntu-latest
-#      steps:
-#
-#        - uses: actions/checkout@v1
-#
-#
-#        - name: Deploy package
-#          uses: appleboy/ssh-action@master
-#          with:
-#            host: ${{ secrets.VPS_HOST }}
-#            port: 22
-#            username: ${{ secrets.USER_VPS }}
-#            password: ${{ secrets.USER_PWD }}
-#            script: |
-#              mkdir -p /home/tg_bot
-#              cd /home/tg_bot
-#              git init
-#              git pull https://feraclin:${{ secrets.DEPLOY_TOKEN }}@github.com/Feraclin/{{ github.event.repository.name }}.git
-#              docker-compose down
-#              docker-compose build
-#              docker-compose up -d --force-recreate
+  build-and-deploy:
+      runs-on: ubuntu-latest
+      steps:
+
+        - uses: actions/checkout@v1
+
+
+        - name: Deploy package
+          uses: appleboy/ssh-action@master
+          with:
+            host: ${{ secrets.VPS_HOST }}
+            port: 22
+            username: ${{ secrets.USER_VPS }}
+            password: ${{ secrets.USER_PWD }}
+            script: |
+              mkdir -p /home/tg_bot
+              cd /home/tg_bot
+              git init
+              git pull https://feraclin:${{ secrets.DEPLOY_TOKEN }}@github.com/Feraclin/{{ github.event.repository.name }}.git
+              docker-compose down
+              docker-compose build
+              docker-compose up -d --force-recreate
+            env:
+              #TelegramBot
+              BOT_TOKEN_TG=${{ secrets.BOT_TOKEN_TG }}
+              #YandexDict
+              YANDEX_DICT_TOKEN=${{ secrets.YANDEX_DICT_TOKEN }}
+              #RabbitMQ
+              RABBITMQ_DEFAULT_HOST=rabbitmq
+              RABBITMQ_DEFAULT_PORT=5672
+              RABBITMQ_DEFAULT_USER=${{ secrets.RABBITMQ_USER }}
+              RABBITMQ_DEFAULT_PASS=${{ secrets.RABBITMQ_PASSWORD }}
+              #Database:
+              POSTGRES_DEFAULT_HOST=db
+              POSTGRES_DEFAULT_PORT=5432
+              POSTGRES_DEFAULT_USER=${{ secrets.POSTGRES_USER }}
+              POSTGRES_DEFAULT_PASS=${{ secrets.POSTGRES_PASSWORD }}
+              POSTGRES_DEFAULT_DB=kts
+              #session
+              SESSION_KEY=${{ secrets.SESSION_KEY }}
+              #admin
+              EMAIL=${{ vars.EMAIL }}
+              PASSWORD=${{ vars.PASS }}
