--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,5 +1,6 @@
-name: Deploy to vps
-on: [workflow_dispatch]
+name: Deploy to VPS
+on:
+  workflow_dispatch:
 jobs:
   run_tests:
     runs-on: ubuntu-latest
@@ -21,63 +22,60 @@ jobs:
           RABBITMQ_PORT: 5672
         ports:
           - 5672:5672
-
     steps:
-
-      - uses: actions/checkout@v2
-
-      - uses: actions/checkout@master
-
-      - uses: actions/setup-python@v1
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
         with:
           python-version: '3.11'
-      - name: Install requirements
-        run: pip install poetry && poetry install
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install poetry
+          poetry install
       - name: Migrate database
         run: poetry run alembic upgrade head
       - name: Run tests
-        run: pytest --cov=app
-
+        run: poetry run pytest --cov=app
   build-and-deploy:
-      runs-on: ubuntu-latest
-      steps:
-
-        - uses: actions/checkout@v1
-
-
-        - name: Deploy package
-          uses: appleboy/ssh-action@master
-          with:
-            host: ${{ secrets.VPS_HOST }}
-            port: 22
-            username: ${{ secrets.USER_VPS }}
-            password: ${{ secrets.USER_PWD }}
-            script: |
-              mkdir -p /home/tg_bot
-              cd /home/tg_bot
-              git init
-              git pull https://feraclin:${{ secrets.DEPLOY_TOKEN }}@github.com/Feraclin/{{ github.event.repository.name }}.git
-              docker-compose down
-              docker-compose build
-              docker-compose up -d --force-recreate
-            env:
-              #TelegramBot
-              BOT_TOKEN_TG=${{ secrets.BOT_TOKEN_TG }}
-              #YandexDict
-              YANDEX_DICT_TOKEN=${{ secrets.YANDEX_DICT_TOKEN }}
-              #RabbitMQ
-              RABBITMQ_DEFAULT_HOST=rabbitmq
-              RABBITMQ_DEFAULT_PORT=5672
-              RABBITMQ_DEFAULT_USER=${{ secrets.RABBITMQ_USER }}
-              RABBITMQ_DEFAULT_PASS=${{ secrets.RABBITMQ_PASSWORD }}
-              #Database:
-              POSTGRES_DEFAULT_HOST=db
-              POSTGRES_DEFAULT_PORT=5432
-              POSTGRES_DEFAULT_USER=${{ secrets.POSTGRES_USER }}
-              POSTGRES_DEFAULT_PASS=${{ secrets.POSTGRES_PASSWORD }}
-              POSTGRES_DEFAULT_DB=kts
-              #session
-              SESSION_KEY=${{ secrets.SESSION_KEY }}
-              #admin
-              EMAIL=${{ vars.EMAIL }}
-              PASSWORD=${{ vars.PASS }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Deploy package
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.VPS_HOST }}
+          port: 22
+          username: ${{ secrets.USER_VPS }}
+          password: ${{ secrets.USER_PWD }}
+          script: |
+            mkdir -p /home/tg_bot
+            cd /home/tg_bot
+            git init
+            git pull https://feraclin:${{ secrets.DEPLOY_TOKEN }}@github.com/Feraclin/{{ github.event.repository.name }}.git
+            docker-compose down
+            docker-compose build
+            docker-compose up -d --force-recreate
+        env:
+          # TelegramBot
+          BOT_TOKEN_TG: ${{ secrets.BOT_TOKEN_TG }}
+          #YandexDict
+          YANDEX_DICT_TOKEN: ${{ secrets.YANDEX_DICT_TOKEN }}
+          #RabbitMQ
+          RABBITMQ_DEFAULT_HOST: rabbitmq
+          RABBITMQ_DEFAULT_PORT: 5672
+          RABBITMQ_DEFAULT_USER: ${{ secrets.RABBITMQ_USER }}
+          RABBITMQ_DEFAULT_PASS: ${{ secrets.RABBITMQ_PASSWORD }}
+          #Database:
+          POSTGRES_DEFAULT_HOST: db
+          POSTGRES_DEFAULT_PORT: 5432
+          POSTGRES_DEFAULT_USER: ${{ secrets.POSTGRES_USER }}
+          POSTGRES_DEFAULT_PASS: ${{ secrets.POSTGRES_PASSWORD }}
+          POSTGRES_DEFAULT_DB: kts
+          #session
+          SESSION_KEY: ${{ secrets.SESSION_KEY }}
+          #admin
+          EMAIL: $EMAIL
+          PASSWORD: $PASS
