--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,6 +13,11 @@ jobs:
           POSTGRES_DB: kts
           POSTGRES_HOST: db
           POSTGRES_PORT: 5432
+          POSTGRES_DEFAULT_HOST: db
+          POSTGRES_DEFAULT_PORT: 5432
+          POSTGRES_DEFAULT_USER: ${{ secrets.POSTGRES_USER }}
+          POSTGRES_DEFAULT_PASS: ${{ secrets.POSTGRES_PASSWORD }}
+          POSTGRES_DEFAULT_DB: kts
         ports:
           - 5432:5432
       rabbitmq:
