--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -50,6 +50,24 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build and push Docker images
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: |
+            docker.io/username/poller:latest
+            docker.io/username/worker:latest
+            docker.io/username/sender:latest
+            docker.io/username/aiohttp:latest
+        secrets:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       - name: Deploy package
         uses: appleboy/ssh-action@master
         with:
@@ -59,11 +77,9 @@ jobs:
           password: ${{ secrets.USER_PWD }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            mkdir -p /home/tg_bot
             cd /home/tg_bot
             git pull origin master
             docker-compose down
-            docker-compose build
             docker-compose up -d --force-recreate
         env:
           # TelegramBot
